--- a/packages/core/pubspec.yaml
+++ b/packages/core/pubspec.yaml
@@ -13,12 +13,13 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
-  uuid: ^4.0.0
+  uuid: ^3.0.7
   json_annotation: ^4.8.0
   state_notifier: ^0.7.2
   http: ">=0.13.6 <2.0.0"
   logger: ^1.1.0
   path_provider: ^2.0.12
+  flutter_fgbg: ^0.3.0
 
 dev_dependencies:
   build_runner: ^2.3.3
